test/bad/functions/void2.px

func f() def
    return

func main() Int def
    x = f()
    return 0
